fixed extra space

--- a/public/style.css
+++ b/public/style.css
@@ -61,9 +61,14 @@ td, th {
   .collapsed {
    display: none;
  }
- #nextLink {
-   margin-top: 2px;
+ #right {
    float: right;
+  }
+  #left {
+    float: left;
+  }
+
+  #prevLink {
   }
   td:nth-of-type(3):before {content: 'Minimum Deposit: '; }
   td:nth-of-type(4):before { content: 'Interest type: '; }
